파일 저장시 vo 자동 점검 후 마커 기능 추가